# SocialScaleBoosterAIbot

./: .dockerignore  .env.example  .gitignore  .no-op  .replit  .replit.bak  DEPLOYMENT_FIX.md  DEPLOYMENT_FIXES_APPLIED.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SOLUTION.md  DEPLOYMENT_SUCCESS.md  Dockerfile  GITHUB_SETUP.md  IMPROVEMENT_IDEAS.md.backup.20251207-162439  LICENSE  README.md  README.md.backup.20251207-162439  app.js  app.py  build.sh  demo.py  demo_app.py  deploy-fix.sh  deploy.sh  deployment-override.conf  deployment.json  deployment.yaml  docker-compose.yml  index-smartflow.html  index.html  main.py  mode_manager.py  nodejs-deploy.sh  nodejs-deployment.conf  nodejs.conf  nodejs.deployment  package-deployment.json  package-lock.json  package.json  (+22 more)
api/: generate.py  prompts.py
assets/: placeholder-images.txt
attached_assets/: Pasted--SmartFlow-Systems-Portfolio-A-dark-themed-portfolio-site-for-SmartFlow-Systems-with-interactive-d-1757192346164_1757192346165.txt  Pasted--tailwind-base-tailwind-components-tailwind-utilities-Root-variables-for-SmartFlow-them-1753235922865_1753235922866.txt  Pasted--usr-bin-env-bash-set-euo-pipefail-Enter-project-for-d-in-PWD-HOME-workspace-HOM-1760142125625_1760142125625.txt  Pasted-0-Repo-Safety-If-index-html-exists-create-index-smartflow-html-instead-and-leave-a-note-at-to-1755385163230_1755385163233.txt  Pasted-Create-a-new-HTML-CSS-JS-Replit-and-add-these-files-exactly-as-provided-F-1755385935955_1755385935960.txt  (+3 more)
client/: index.html
public/: app.css  dashboard.html  index.html  pricing.html  (+3 more)
(+83 files in other folders)
