[project]
name = "smartflow-ai"
version = "1.0.0"
description = "SmartFlow AI - Full-stack Node.js e-commerce social media bot platform with optional Python Flask support"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = []

# Note: This is primarily a Node.js/TypeScript application
# See package.json for main dependencies
# Python dependencies in requirements.txt are optional for dual-mode Flask support
